--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,13 @@
 [versions]
 accompanistPager = "0.28.0"
+activityKtx = "1.10.0"
 agp = "8.5.2"
 datastorePreferences = "<version>1.0.0"
 firebaseAuth = "23.0.0"
 firebaseBom = "33.4.0"
+firebaseBomVersion = "33.8.0"
 firebaseFirestore = "25.1.0"
+fragmentKtx = "1.8.5"
 hilt = "2.49"
 kotlin = "1.9.23"
 coreKtx = "1.13.1"
@@ -17,6 +20,8 @@ composeBom = "2024.09.03"
 navigationCompose = "2.8.2"
 playServices = "17.0.0"
 playServicesAds = "23.4.0"
+playServicesAuth = "21.3.0"
+playServicesBase = "18.5.0"
 uiToolingPreview = "VERSION"
 constraintlayoutCompose = "1.0.1"
 uiTestAndroid = "1.7.3"
@@ -24,10 +29,13 @@ datastoreCoreAndroid = "1.1.1"
 
 [libraries]
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
 firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-bom-v3380 = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
 firebase-firestore = { module = "com.google.firebase:firebase-firestore", version.ref = "firebaseFirestore" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -52,6 +60,8 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.2.0" }
 play-services = { module = "com.google.android.gms:play-services", version.ref = "playServices" }
 play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
+play-services-base = { module = "com.google.android.gms:play-services-base", version.ref = "playServicesBase" }
 ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 androidx-constraintlayout-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayoutCompose" }
 androidx-ui-test-android = { group = "androidx.compose.ui", name = "ui-test-android", version.ref = "uiTestAndroid" }
